# HCAI

./: HCAIServerScript.cs  ObjectManager.cs  ServerScript.cs  main.py  pyproject.toml  record_and_ASR_test.py  record_audio.py  test_audio_classification.py  test_classifier.py
